Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89715

QtQuick window title bar scaled to wrong monitor's DPI setting with d3d11 backend

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.1.0 Alpha
    • 6.0.0
    • Qt RHI, Quick: Controls 2
    • None
    • Windows
    • 7f5d74fb6f2c22c97ca7e2dc4c553c6f148521bc (qt/qtdeclarative/dev)

      The title bar (non client area) for my QtQuick window scales to the wrong monitor's DPI setting when using the d3d11 backend. It incorrectly scales to my primary monitor's DPI, rather than the monitor where the window is actually located.

      It scales correctly when I switch to the vulkan backend, or with an equivalent QWidget on both the d3d11 and vulkan backends.

      The attached PySide6 script demonstrates the problem. Run the script and move the windows to a secondary monitor with a different DPI scaling than the primary monitor. The "QML" window's title bar does not match the "Widget" window when using the d3d11 backend. If the backend is changed to vulkan, the title bars scale correctly.

      The attached screenshot shows the incorrect scaling on my secondary monitor.

       

        For Gerrit Dashboard: QTBUG-89715
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            emddudley Michael Dudley
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes