src/gui/kernel/qsurface.cpp
@@ -85,7 +85,9 @@ QT_BEGIN_NAMESPACE
     \value MetalSurface The surface is a Metal compatible surface and can be used
     in conjunction with Apple's Metal graphics API. This surface type is supported
     on macOS only.
-
+    \value Direct3DSurface The surface is a Direct 3D 11 and 12 compatible
+    surface and can be used in conjunction with the DXGI and Direct3D APIs. This
+    surface type is supported on Windows only.
  */
 
 
