tests/manual/rhi/shared/examplefw.h
@@ -192,7 +192,7 @@ Window::Window()
         setSurfaceType(VulkanSurface);
         break;
     case D3D11:
-        setSurfaceType(OpenGLSurface); // not a typo
+        setSurfaceType(Direct3DSurface);
         break;
     case Metal:
 #if (QT_VERSION >= QT_VERSION_CHECK(5, 12, 0))
